# dashboard/docs/swagger.json
@@ -279,14 +279,13 @@
                 }
             }
         },
-        "/photo/upload": {
+        "/images/upload/by_file": {
             "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Upload a image by url to s3",
                 "consumes": [
                     "application/json"
                 ],
@@ -294,14 +293,21 @@
                     "application/json"
                 ],
                 "tags": [
-                    "photo"
+                    "images"
                 ],
-                "summary": "Upload a image by url to s3",
+                "summary": "Upload file to s3",
                 "parameters": [
                     {
+                        "type": "file",
+                        "description": "Image data",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
                         "type": "string",
-                        "description": "Url",
-                        "name": "url",
+                        "description": "Directory in s3 storage",
+                        "name": "dir",
                         "in": "query",
                         "required": true
                     }
@@ -310,7 +316,55 @@
                     "200": {
                         "description": "A url to the stored image",
                         "schema": {
-                            "$ref": "#/definitions/pkg_gateways_http_photo.UploadResponse"
+                            "$ref": "#/definitions/pkg_gateways_http_image.UploadResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Parsing error"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/images/upload/by_url": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "UploadByURL a image by url to s3",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "images"
+                ],
+                "summary": "UploadByURL a image by url to s3",
+                "parameters": [
+                    {
+                        "description": "URL and directory in s3 storage",
+                        "name": "uploadByURLRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/pkg_gateways_http_image.uploadByURLRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A url to the stored image",
+                        "schema": {
+                            "$ref": "#/definitions/pkg_gateways_http_image.UploadResponse"
                         }
                     },
                     "400": {
@@ -432,6 +486,48 @@
                 "responses": {
                     "200": {
                         "description": "Saved place",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Place"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            },
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "places"
+                ],
+                "summary": "Patch a place",
+                "parameters": [
+                    {
+                        "description": "Place data",
+                        "name": "place",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/usecase.UpdatePlaceInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Patched place",
                         "schema": {
                             "$ref": "#/definitions/domain.Place"
                         }
@@ -875,9 +971,20 @@
                 }
             }
         },
-        "pkg_gateways_http_photo.UploadResponse": {
+        "pkg_gateways_http_image.UploadResponse": {
             "type": "object",
             "properties": {
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "pkg_gateways_http_image.uploadByURLRequest": {
+            "type": "object",
+            "properties": {
+                "directory": {
+                    "type": "string"
+                },
                 "url": {
                     "type": "string"
                 }
